# data_parsing

./: .gitignore  README.md  ROADMAP-knowledge-graph.md  download_models.py  ingest_folder.py  plan.md  pyproject.toml  requirements.txt
pdfsearch/: cli.py  config.py  database.py  embeddings.py  graph.py  harness.py  kg_builder.py  kg_database.py  kg_extract.py  main.py  ontology.py  parser.py  pipeline.py  search.py  summarizer.py
pdfsearch/static/: app.js  entity_graph.js  graph.js  index.html  style.css
tests/: __init__.py  test_harness.py  test_kg_build.py  test_kg_extract.py  test_ontology.py
